--- a/vertx-pg-client/pom.xml
+++ b/vertx-pg-client/pom.xml
@@ -27,9 +27,9 @@
 
   <artifactId>vertx-pg-client</artifactId>
 
-  <name>Vertx PostgreSQL Client</name>
-  <url>https://github.com/eclipse-vertx/vertx-sql-client</url>
-  <description>The Reactive PostgreSQL Client</description>
+  <name>Vertx PostgreSQL Client, FOLIO fork</name>
+  <url>https://github.com/folio-org/vertx-sql-client</url>
+  <description>The Reactive PostgreSQL Client, FOLIO fork</description>
 
   <properties>
     <doc.skip>false</doc.skip>
