Disable other database clients not needed for FOLIO

--- a/pom.xml
+++ b/pom.xml
@@ -105,10 +105,12 @@
   <modules>
     <module>vertx-sql-client</module>
     <module>vertx-pg-client</module>
+<!-- not needed for FOLIO:
     <module>vertx-mysql-client</module>
     <module>vertx-mssql-client</module>
     <module>vertx-db2-client</module>
     <module>vertx-sql-client-templates</module>
+-->
   </modules>
 
   <distributionManagement>
