Use FOLIO version of vertx-sql-client
Copy from 3.9 to master.
(cherry picked from commit 6f45dadd5de7401b024f94fcad06fd550b102cf1)

--- a/vertx-pg-client/pom.xml
+++ b/vertx-pg-client/pom.xml
@@ -59,6 +59,7 @@
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-sql-client</artifactId>
+      <version>${project.version}</version>
     </dependency>
 
     <!-- sasl scram authentication -->
@@ -79,6 +80,7 @@
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-sql-client</artifactId>
+      <version>${project.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
