--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   </parent>
 
   <artifactId>vertx-sql-client-parent</artifactId>
-  <version>4.0.0.Beta3-FOLIO</version>
+  <version>4.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Vertx SQL Client parent, FOLIO fork</name>
@@ -47,7 +47,7 @@
   </scm>
 
   <properties>
-    <stack.version>4.0.0.Beta3</stack.version>
+    <stack.version>4.0.0-SNAPSHOT</stack.version>
     <gpg.skip>true</gpg.skip> <!-- FOLIO doesn't sign -->
     <doc.skip>true</doc.skip>
     <jmh.version>1.19</jmh.version>
