--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: Docker
-        uses: actions/setup-docker@v1
+        uses: docker-practice/actions-setup-docker@v1
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install JDK
