--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,4 @@ jobs:
         with:
           java-version: ${{ matrix.jdk }}
       - name: Run tests
-        run: mvn -q clean verify -B -DskipDefault -Dtest=UnixDomainSocketTest -P ${{ matrix.profile }}
+        run: mvn -q clean verify -B -DskipDefault -Dtest=PreparedStatementTest,UnixDomainSocketTest -P ${{ matrix.profile }}
