--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Docker
         uses: docker-practice/actions-setup-docker@v1
+        with:
+          docker_buildx: false
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install JDK
